--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fusion-starter",
   "private": true,
   "type": "module",
-  "homepage": "https://hassan3208.github.io/rangista-web",
+  "base": "/rangistawbsite/",
   "pkg": {
     "assets": [
       "dist/spa/*"
