--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
-       "version": 2,
-       "rewrites": [
-         {
-           "source": "/(.*)",
-           "destination": "/dist/spa/index.html"
-         }
-       ],
-       "cleanUrls": true,
-       "trailingSlash": false
-     }
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/spa/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/dist/spa/index.html"
+    }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
+}
