--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
-       "version": 2,
-       "rewrites": [
-         {
-           "source": "/(.*)",
-           "destination": "/dist/spa/index.html"
-         }
-       ],
-       "cleanUrls": true,
-       "trailingSlash": false
-      }
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/spa",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
+}
