--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,11 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/spa",
-  "routes": [
-    {
-      "src": "^/(.*\\.)(?:js|css|gif|ico|jpg|jpeg|png|svg|webp|woff|woff2)$",
-      "headers": {
-        "cache-control": "public, immutable, max-age=31536000"
-      },
-      "continue": true
-    },
-    {
-      "src": "^/(.*)$",
-      "dest": "/index.html",
-      "status": 200
-    }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
-}
+       "version": 2,
+       "rewrites": [
+         {
+           "source": "/(.*)",
+           "destination": "/dist/spa/index.html"
+         }
+       ],
+       "cleanUrls": true,
+       "trailingSlash": false
+      }
