--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
+VITE_ALLOWED_ADMIN_EMAILS=l1f22bscs1019@ucp.edu.pk,itsmywork1019@gmail.com,rangistaarttowear@gmail.com
+VITE_ADMIN_PASSWORD=4321
